@@ -18,8 +18,8 @@ repositories {
     jcenter()
 }
 
-sourceCompatibility = 11
-targetCompatibility = 11
+sourceCompatibility = 16
+targetCompatibility = 16
 
 dependencies {
     // Use JUnit test framework.
@@ -72,7 +72,21 @@ tasks.jlink.doLast {
     }
 }
 
+// tasks.withType(JavaCompile).configureEach {
+//     options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
+
+//     def toolchainHome = javaToolchains.compilerFor {
+//             languageVersion = JavaLanguageVersion.of(16)
+//         }.get().metadata.installationPath.asFile.absolutePath
+//     options.forkOptions.executable = "$toolchainHome/javac"
+// }
+
+tasks.withType( JavaCompile ).configureEach {
+    options.forkOptions.jvmArgs.addAll( ['--add-opens', 'jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'] )
+}
+
 javadoc {
     source = sourceSets.main.allJava
-    classpath = configurations.compile
 }
+
+
